# Raycaster-Map-Editor

./: CMakeLists.txt
include/: filesystem.hpp  material.hpp  ray.hpp  renderer.hpp  shader.hpp  transform.hpp
src/: main.cpp  ray.cpp  renderer.cpp  shader.cpp
src/shaders/: default.vert
